--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
-
+    parameters{
+        string(name: "ENV", defaultValue: "Test", description: "version to deploy")
+        booleanParam(name: "ExecuteTests", defaultValue: true, description: "decide to run tc")
+        choice(name: "APPVERSION", choices['1.1', '1.2', '1.3'])
+    }
     stages {
         
         stage('Build') {
@@ -11,10 +15,23 @@ pipeline {
             }
         }
         
-        stage("compile") {
+        stage("Test") {
+            when{
+                expression{
+                    params.ExecuteTests == true
+                }
+            }
             steps {
                 script {
-                    echo "Compiling the code"
+                    echo "Testing the code"
+                }
+            }
+        }
+        stage("Deploy"){
+            steps {
+                script{
+                    echo "Deploying the app"
+                    echo "Deploying to env": ${params.ENV}                    
                 }
             }
         }
