--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
     parameters{
         string(name: "ENV", defaultValue: "Test", description: "version to deploy")
         booleanParam(name: "ExecuteTests", defaultValue: true, description: "decide to run tc")
-        choice(name: "APPVERSION", choices['1.1', '1.2', '1.3'])
+        choice(name: "APPVERSION", choices: ['1.1', '1.2', '1.3'])
     }
     stages {
         
