env param added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,10 @@
 pipeline {
     agent any
+    parameters{
+        string(name:'Env',defaultvalue:'test',description:'Env to deploy')
+    }
 
-    stages {
+    stages 
         stage('compile') {
             steps {
                 echo 'compile the code'
