env pram added1

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,8 +16,9 @@ pipeline {
         }
          stage('package') {
             steps {
-                echo 'package the code'
+                echo "package the code in env:${params.Env}"
             }
         }
+   
     }
 }
