choice param added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,11 +3,12 @@ pipeline {
     parameters{
         string(name:'Env',defaultValue:'test',description:'Env to deploy')
         booleanParam(name:'executeTests',defaultValue:true,description:'decide to run test cases')
+        choice(name:'APPVERSION',choices:['1.1','1.2','1.3'])
     }
     stages {
         stage('compile') {
             steps {
-                echo 'compile the code'
+                echo "compile the code ${params.APPVERSION}"
             }
         }
          stage('unittest') {
