--- a/jenkinsfile
+++ b/jenkinsfile
@@ -26,6 +26,18 @@ pipeline {
                 echo "package the code in env:${params.Env}"
             }
         }
+        stage('Deploy') {
+            input{
+                mesage: "Provide approval for prod"
+                ok "Deploy to Prod"
+                parameters{
+                    booleanParam(name:'DEPLOYTOPROD',defaultValue:false,description:'decide to deploy on prod')
+                }
+            }
+            steps {
+                echo "Deploying the app in env:${params.Env}"
+            }
+        }
    
     }
 }
