--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,43 +1,30 @@
 pipeline {
     agent any
-    parameters{
-        string(name:'Env',defaultValue:'test',description:'Env to deploy')
-        booleanParam(name:'executeTests',defaultValue:true,description:'decide to run test cases')
-        choice(name:'APPVERSION',choices:['1.1','1.2','1.3'])
+    tools{
+        jdk 'myjava'
+        maven 'mymaven'
     }
+    
     stages {
         stage('compile') {
             steps {
-                echo "compile the code ${params.APPVERSION}"
+                echo "compile the code"
+                sh 'mvn compile'
             }
         }
          stage('unittest') {
-            when{
-                expression{
-                    params.executeTests == true
-                }
-            }
+            
             steps {
-                echo 'run the test file'
+                echo 'run the test cases'
+                sh 'mvn test'
             }
         }
          stage('package') {
             steps {
-                echo "package the code in env:${params.Env}"
+                echo "package the code"
+                sh 'mvn package'
             }
-        }
-        stage('Deploy') {
-            input{
-                message "Provide approval for prod"
-                ok "Deploy to Prod"
-                parameters{
-                    booleanParam(name:'DEPLOYTOPROD',defaultValue:false,description:'decide to deploy on prod')
-                }
-            }
-            steps {
-                echo "Deploying the app in env:${params.Env}"
-            }
-        }
+        }   
    
     }
 }
