--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent any
+    agent none
     tools{
         jdk 'myjava'
         maven 'mymaven'
@@ -7,19 +7,26 @@ pipeline {
     
     stages {
         stage('compile') {
+            agent any
             steps {
                 echo "compile the code"
                 sh 'mvn compile'
             }
         }
          stage('unittest') {
-            
+            agent any
             steps {
                 echo 'run the test cases'
                 sh 'mvn test'
             }
+            post{
+                always{
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
         }
          stage('package') {
+            agent {label 'linux_slave'}
             steps {
                 echo "package the code"
                 sh 'mvn package'
