--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,38 +1,22 @@
 pipeline {
-    agent none
-    tools{
-       // jdk 'myjava'
-        maven 'mymaven'
-    }
-    
+    agent any
+
     stages {
-       
         stage('compile') {
-            agent any
             steps {
-                echo "compile the code"
-                sh 'mvn compile'
+                echo 'compile the code'
             }
         }
-         stage('unittest') {
-            agent any
+    stage('test') {
             steps {
                 echo 'run the test cases'
-                sh 'mvn test'
-            }
-            post{
-                always{
-                    junit 'target/surefire-reports/*.xml'
-                }
             }
         }
-         stage('package') {
-            agent {label 'linux_slave'}
+        stage('package') {
             steps {
-                echo "package the code"
-                sh 'mvn package'
+                echo 'package the code'
             }
-        }   
-   
+        }
     }
 }
+          
