--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,9 @@
 pipeline {
     agent any
 
+parameters{
+    string(name:'Env',defaultValue:'Test',description:'Env to deploy')
+}
     stages {
         stage('compile') {
             steps {
