env param1 added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ parameters{
         }
         stage('package') {
             steps {
-                echo 'package the code'
+                echo "package the code in env:${params.Env}"
             }
         }
     }
