choice param added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,11 +4,12 @@ pipeline {
 parameters{
     string(name:'Env',defaultValue:'Test',description:'Env to deploy')
     booleanParam(name:'executeTests',defaultValue:true,description:'decide to run the test cases')
-}
+    choice(name:'APPVERSION',choices:['1.1','1.2','1.3'])
+    }
     stages {
         stage('compile') {
             steps {
-                echo 'compile the code'
+                echo "compile the code ${params.APPVERSION}" 
             }
         }
     stage('UnitTest') {
