input param added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -27,6 +27,18 @@ parameters{
                 echo "package the code in env:${params.Env}"
             }
         }
+        stage('Deploy') {
+            input{
+                message: "Provide the approval for Prod"
+                ok "Deploy to prod"
+                parameters{
+                    booleanParam(name:'DEPLOYTOPROD',defaultValue:false,description:'decide to deploy on prod')
+                }
+            }
+            steps {
+                echo "Deploying the app in env:${params.Env}"
+            }
+        }
     }
 }
           
