--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,26 +1,34 @@
 pipeline {
-    agent any
+    agent none
     tools{
-        jdk 'myjava1'
+       // jdk 'myjava1'
         maven 'mymaven1'
     }
 
 
     stages {
         stage('compile') {
+            agent any
             steps {
                 echo "compile the code"
                 sh 'mvn compile' 
             }
         }
     stage('UnitTest') {
+        agent any
        
             steps {
                 echo 'run the test cases'
                 sh 'mvn test'
             }
+            post{
+                always{
+                    junit 'target/surefire-reports/*.xml'
+                }
+            }
         }
         stage('package') {
+            agent{label 'linux_slave'}
             steps {
                 echo "package the code"
                 sh 'mvn package'
