--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    parameters{
+        string(name:'Env',defaultValue:'Test',description:'Env to deploy')
+    }
 
     stages {
         stage('Compile') {
