--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
         }
         stage('Package ') {
             steps {
-                echo 'Package the code'
+                echo "Package the code in env:${params.Env}"
             }
         }
         
