--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     parameters{
         string(name:'Env',defaultValue:'Test',description:'Env to deploy')
+        booleanParam(name:'executeTests',defaultValue:true,description:'Decide to run test cases')
     }
 
     stages {
