--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,6 +12,11 @@ pipeline {
             }
         }
         stage('UnitTest') {
+            when{
+                expression{
+                    params.executeTests == true
+                }
+            }
             steps {
                 echo 'Run the test cases'
             }
