--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,12 +3,14 @@ pipeline {
     parameters{
         string(name:'Env',defaultValue:'Test',description:'Env to deploy')
         booleanParam(name:'executeTests',defaultValue:true,description:'Decide to run test cases')
+        choice(name:'APPVERSION',choices:['1.1','1.2','1.3'])
+    
     }
 
     stages {
         stage('Compile') {
             steps {
-                echo 'Compile the code'
+                echo "Compile the code ${params.APPVERSION}"
             }
         }
         stage('UnitTest') {
