--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,45 +1,34 @@
 pipeline {
     agent any
-    parameters{
-        string(name:'Env',defaultValue:'Test',description:'Env to deploy')
-        booleanParam(name:'executeTests',defaultValue:true,description:'Decide to run test cases')
-        choice(name:'APPVERSION',choices:['1.1','1.2','1.3'])
-    
+    tools{
+        jdk 'myjava'
+        maven 'mymaven'
     }
+   
 
     stages {
         stage('Compile') {
             steps {
-                echo "Compile the code ${params.APPVERSION}"
+                echo "Compile the code"
+                sh 'mvn compile'
             }
         }
         stage('UnitTest') {
-            when{
-                expression{
-                    params.executeTests == true
-                }
-            }
+           
             steps {
                 echo 'Run the test cases'
+                sh 'mvn test'
             }
         }
         stage('Package ') {
             steps {
-                echo "Package the code in env:${params.Env}"
+                echo "Package the code"
+                sh 'mvn package'
             }
         }
-       stage('Deploy') {
-        input{
-            message "Provide approval for prod"
-            ok "Deploy to prod"
-            parameters{
-                booleanParam(name:'DEPLOYTOPROD',defaultValue:false,description:'Decide to Deploy on prod')
-            }
-        }
-            steps {
-                echo "Package the code in env:${params.Env}"
-            }
-        } 
     }
+    
 }
+
+
           
