--- a/jenkinsfile
+++ b/jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                 echo "Package the code"
                // sh 'mvn package'
                sh "scp -o StrictHostKeyChecking=no server-script.sh ec2-user@172.31.36.92:/home/ec2-user"
-               sh "ssh -o StrictHostKeyChecking=no ec2-user@172.31.36.92 ~/server-script.sh"
+               sh "ssh -o StrictHostKeyChecking=no ec2-user@172.31.36.92 bash ~ec2-user/server-script.sh"
               // sh "ssh -o ec2-user@172.31.36.92 sudo docker build -t imagename /home/ec2-user/addressbook"
 
                }
