docker steps added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,10 @@ pipeline {
         //jdk 'myjava'
         maven 'mymaven'
     }
+    environment{
+        IMAGE_NAME='manoranjan555/deploy:$BUILD_NUMBER'
+        BUILD_SERVER_IP='ec2-user@172.31.36.92'
+    }
    
 
     stages {
@@ -33,16 +37,24 @@ pipeline {
            //ON Slaves2
             steps {
                 sshagent(['build-server-key']) {
+                    withCredentials([usernamePassword(credentialsId: 'docker-hub', passwordVariable: 'PASSWORD', usernameVariable: 'USERNAME')]) {
 
                 echo "Package the code"
                // sh 'mvn package'
-               sh "scp -o StrictHostKeyChecking=no server-script.sh ec2-user@172.31.36.92:/home/ec2-user"
-               sh "ssh -o StrictHostKeyChecking=no ec2-user@172.31.36.92 bash ~ec2-user/server-script.sh"
-              // sh "ssh -o ec2-user@172.31.36.92 sudo docker build -t imagename /home/ec2-user/addressbook"
+               sh "scp -o StrictHostKeyChecking=no server-script.sh ${BUILD_SERVER_IP}:/home/ec2-user"
+               sh "ssh -o StrictHostKeyChecking=no ${BUILD_SERVER_IP} bash ~ec2-user/server-script.sh"
+               sh "ssh ${BUILD_SERVER_IP} sudo docker build -t ${IMAGE_NAME} /home/ec2-user/addressbook"
+               sh "ssh ${BUILD_SERVER_IP} sudo docker login -u $USERNAME -P $PASSWORD"
+               sh "ssh ${BUILD_SERVER_IP} sudo docker push ${IMAGE_NAME}"
+
 
                }
+}
+ 
+
             }
         }
+
     }
     
 }
