docker steps added

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -44,7 +44,7 @@ pipeline {
                sh "scp -o StrictHostKeyChecking=no server-script.sh ${BUILD_SERVER_IP}:/home/ec2-user"
                sh "ssh -o StrictHostKeyChecking=no ${BUILD_SERVER_IP} bash ~ec2-user/server-script.sh"
                sh "ssh ${BUILD_SERVER_IP} sudo docker build -t ${IMAGE_NAME} /home/ec2-user/addressbook"
-               sh "ssh ${BUILD_SERVER_IP} sudo docker login -u $USERNAME -P $PASSWORD"
+               sh "ssh ${BUILD_SERVER_IP} sudo docker login -u $USERNAME -p $PASSWORD"
                sh "ssh ${BUILD_SERVER_IP} sudo docker push ${IMAGE_NAME}"
 
 
@@ -54,6 +54,7 @@ pipeline {
 
             }
         }
+
 
     }
     
